--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
   "description": "Provide an abstraction to seach for torrent files on many websites.",
   "keywords": [
     "torrent",
-    "piratebay",
-    "kickass"
+    "piratebay"
   ],
   "license": "MIT",
   "homepage": "https://github.com/xurumelous/torrent-scraper",
