--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "ext-curl": "*",
     "guzzlehttp/guzzle": "~6.2",
     "symfony/dom-crawler": ">=2.6",
-    "symfony/css-selector": ">=2.6"
+    "symfony/css-selector": ">=2.6",
+    "gabrielelana/byte-units": "^0.3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "5.2.*",
